# homelab-control

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.make_assets/: .pre-commit-config.yaml
.make_assets/shared-python-app/: generator.ts  schema.json
.make_assets/shared-python-lib/: generator.ts  schema.json
docs/: basic_prd.md
docs/diagrams/: architecture.mmd  build-system-workflow.mmd  repo-layout.mmd  user-workflows.mmd
scripts/: remove_setup_helper.py  setup.py
tests/: test_setup.py
