[project]
name = "ai-native-monorepo-starter-kit"
version = "0.1.0"
requires-python = ">=3.8"

[tool.uv]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
    "pre-commit",
    "uv"
]